added financial stataments, dcf, results/detailes company quotes
